--- a/.github/workflows/oracle-db-audit-replication-management.yml
+++ b/.github/workflows/oracle-db-audit-replication-management.yml
@@ -112,4 +112,4 @@ jobs:
           TARGET_ENVIRONMENT_NAME="${{ github.event.inputs.TargetEnvironment }}"
           SIMPLE_ENVIRONMENT_NAME="${TARGET_ENVIRONMENT_NAME##*-}"
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-             -e replication_action=${{ github.event.inputs.Action }} -e simple_environment_name=$SIMPLE_ENVIRONMENT_NAME
+             -e replication_action=${{ github.event.inputs.Action }} -e region=eu-west-2 -e simple_environment_name=$SIMPLE_ENVIRONMENT_NAME
