--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/main.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/main.yml
@@ -1,3 +1,9 @@
+- shell: whoami
+  register: debug_this
+
+- debug: 
+    var: debug_this
+
 # If we are restarting replication (as opposed to resuming),
 # we need to provide:
 # (1) the SCN for restarting Audited Interaction replication to avoid replicating data which is already in the
