--- a/.github/workflows/oracle-db-audit-replication-management.yml
+++ b/.github/workflows/oracle-db-audit-replication-management.yml
@@ -105,6 +105,7 @@ jobs:
 
       - name: Run Oracle Audit Replication Management Playbook
         run: |
+          DATABASE_ENVIRONMENT="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')"
           export ANSIBLE_CONFIG=$ansible_config
           # Since we run this Ansible code directly on the controller, the Ansible variables defined
           # for the hosts are not available.  Therefore we need to calculate the Simple Environment
@@ -112,4 +113,5 @@ jobs:
           TARGET_ENVIRONMENT_NAME="${{ github.event.inputs.TargetEnvironment }}"
           SIMPLE_ENVIRONMENT_NAME="${TARGET_ENVIRONMENT_NAME##*-}"
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-             -e replication_action=${{ github.event.inputs.Action }} -e region=eu-west-2 -e simple_environment_name=$SIMPLE_ENVIRONMENT_NAME
+             -e replication_action=${{ github.event.inputs.Action }} -e region=eu-west-2 \
+             -e database_environment=$DATABASE_ENVIRONMENT -e simple_environment_name=$SIMPLE_ENVIRONMENT_NAME
