--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/main.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/main.yml
@@ -1,8 +1,8 @@
 # - shell: whoami
 #   register: debug_this
 
-# - debug: 
-#     var: debug_this
+- debug: 
+    var: database_environment
 
 # If we are restarting replication (as opposed to resuming),
 # we need to provide:
@@ -19,9 +19,12 @@
     - replication_action == 'restart'
     - audit_cdc_scn == ''
 
+# If we are calling this role from within another Ansible role then the database environment will not be set, and we will need
+# to calculate it.  If this role is being called from Github Actions directly we set the database_environment as an input extra variable.
 - name: Get Database Environment
   set_fact:
     database_environment: "{{ groups | select('match','.*_primarydb') | list | first | regex_replace('^(.*)_primarydb', '\\1') }}"
+  when: database_environment is not defined
 
 # There is currently no DMS Functionality in the Amazon.Aws Collection
 # so we will use the AWSCLI instead
