--- a/playbooks/oracle_audit_replication_management/playbook.yml
+++ b/playbooks/oracle_audit_replication_management/playbook.yml
@@ -1,6 +1,5 @@
 ---
-- hosts: localhost
+- hosts: "{{ target_hosts }}"
   gather_facts: no
-  become: no
   roles:
     - oracle_audit_replication_management
