--- a/.github/workflows/oracle-db-audit-replication-management.yml
+++ b/.github/workflows/oracle-db-audit-replication-management.yml
@@ -115,6 +115,8 @@ jobs:
       - name: Run Oracle Audit Replication Management Playbook
         run: |
           export ANSIBLE_CONFIG=$ansible_config
+          echo "A1: ${{ github.event.inputs.Action }}"
+          echo "A2: ${{ inputs.Action }}"
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
              -e replication_action=${{ github.event.inputs.Action }} \
              -e target_hosts=${{ steps.prepareinventorynames.outputs.hosts }}
