--- a/.github/workflows/oracle-db-audit-replication-management.yml
+++ b/.github/workflows/oracle-db-audit-replication-management.yml
@@ -115,8 +115,9 @@ jobs:
       - name: Run Oracle Audit Replication Management Playbook
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          echo "A1: ${{ github.event.inputs.Action }}"
-          echo "A2: ${{ inputs.Action }}"
+          # Depending on whether this workflow is called by a workflow_dispatch or workflow_call event
+          # the replication action will be stored in different variables.  Pick the non-empty one.
+          REPLICATION_ACTION="${${{ github.event.inputs.Action }}:-${{ inputs.Action }}}"
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-             -e replication_action=${{ github.event.inputs.Action }} \
+             -e replication_action=$REPLICATION_ACTION \
              -e target_hosts=${{ steps.prepareinventorynames.outputs.hosts }}
