--- a/.github/workflows/oracle-db-audit-replication-management.yml
+++ b/.github/workflows/oracle-db-audit-replication-management.yml
@@ -117,7 +117,7 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           # Depending on whether this workflow is called by a workflow_dispatch or workflow_call event
           # the replication action will be stored in different variables.  Pick the non-empty one.
-          REPLICATION_ACTION="${${{ github.event.inputs.Action }}:-${{ inputs.Action }}}"
+          REPLICATION_ACTION="${'${{ github.event.inputs.Action }}':-'${{ inputs.Action }}'}"
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
              -e replication_action=$REPLICATION_ACTION \
              -e target_hosts=${{ steps.prepareinventorynames.outputs.hosts }}
