--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -85,6 +85,7 @@ permissions:
 jobs:
 
   stop-audit-replication:
+    if: ${{ startsWith(github.event.inputs.TargetHost, 'delius-') }}
     uses: ./.github/workflows/oracle-db-audit-replication-management.yml
     with:
       TargetEnvironment: ${{ github.event.inputs.TargetEnvironment }}
@@ -704,7 +705,7 @@ jobs:
   restart-audit-replication:
     uses: ./.github/workflows/oracle-db-audit-replication-management.yml
     needs: [oracle-build-ha,oracle-rman-post-duplicate]
-    if:  ${{ ( needs.oracle-rman-post-duplicate == 'success' || needs.oracle-rman-post-duplicate == 'skipped' ) &&  ( needs.oracle-build-ha == 'success' || needs.oracle-build-ha == 'skipped' ) }}
+    if:  ${{ startsWith(github.event.inputs.TargetHost, 'delius-') && ( needs.oracle-rman-post-duplicate == 'success' || needs.oracle-rman-post-duplicate == 'skipped' ) &&  ( needs.oracle-build-ha == 'success' || needs.oracle-build-ha == 'skipped' ) }}
     with:
       TargetEnvironment: ${{ github.event.inputs.TargetEnvironment }}
       Action: "restart"
