--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -85,7 +85,7 @@ permissions:
 jobs:
 
   stop-audit-replication:
-    if: ${{ startsWith(github.event.inputs.TargetHost, 'delius-') }}
+    if: ${{ startsWith(github.event.inputs.TargetHost, 'delius_') }}
     uses: ./.github/workflows/oracle-db-audit-replication-management.yml
     with:
       TargetEnvironment: ${{ github.event.inputs.TargetEnvironment }}
@@ -704,13 +704,13 @@ jobs:
   # normally want to read from the standby database if available, to reduce load on the primary.
   restart-audit-replication:
     uses: ./.github/workflows/oracle-db-audit-replication-management.yml
-    needs: [oracle-build-ha,oracle-rman-post-duplicate]
-    if:  ${{ startsWith(github.event.inputs.TargetHost, 'delius-') && ( needs.oracle-rman-post-duplicate == 'success' || needs.oracle-rman-post-duplicate == 'skipped' ) &&  ( needs.oracle-build-ha == 'success' || needs.oracle-build-ha == 'skipped' ) }}
+    needs: [oracle-rman-duplicate-check,oracle-build-ha,oracle-rman-post-duplicate]
+    if:  ${{ startsWith(needs.oracle-rman-duplicate-check.outputs.TargetHost, 'delius_') && ( needs.oracle-rman-post-duplicate == 'success' || needs.oracle-rman-post-duplicate == 'skipped' ) &&  ( needs.oracle-build-ha == 'success' || needs.oracle-build-ha == 'skipped' ) }}
     with:
-      TargetEnvironment: ${{ github.event.inputs.TargetEnvironment }}
+      TargetEnvironment: ${{ needs.oracle-rman-duplicate-check.outputs.TargetEnvironment }}
       Action: "restart"
-      SourceCodeVersion: ${{ github.event.inputs.SourceCodeVersion }}
-      SourceConfigVersion: ${{ github.event.inputs.SourceConfigVersion }}
+      SourceCodeVersion: ${{ needs.oracle-rman-duplicate-check.outputs.SourceCodeVersion }}
+      SourceConfigVersion: ${{ needs.oracle-rman-duplicate-check.outputs.SourceConfigVersion }}
 
   slack-notification:
     if: ${{ failure() }}
