--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -85,7 +85,7 @@ permissions:
 jobs:
 
   stop-audit-replication:
-    if: ${{ startsWith(github.event.inputs.TargetHost, 'delius_') }}
+    if: ${{ (github.event_name != 'repository_dispatch') && (startsWith(github.event.inputs.TargetHost, 'delius_')) }}
     uses: ./.github/workflows/oracle-db-audit-replication-management.yml
     with:
       TargetEnvironment: ${{ github.event.inputs.TargetEnvironment }}
@@ -94,7 +94,7 @@ jobs:
       SourceConfigVersion: ${{ github.event.inputs.SourceConfigVersion }}
 
   oracle-rman-pre-duplicate:
-    if: ${{ github.event_name != 'repository_dispatch' }}
+    if: ${{ (github.event_name != 'repository_dispatch') && ( needs.stop-audit-replication == 'success' || needs.stop-audit-replication == 'skipped' ) }}
     needs: [stop-audit-replication]
     name: oracle-rman-pre-duplicate
     environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
