--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -84,8 +84,9 @@ permissions:
 
 jobs:
 
+
+  # if: ${{ (github.event_name != 'repository_dispatch') && (startsWith(github.event.inputs.TargetHost, 'delius_')) }}
   stop-audit-replication:
-    if: ${{ (github.event_name != 'repository_dispatch') && (startsWith(github.event.inputs.TargetHost, 'delius_')) }}
     uses: ./.github/workflows/oracle-db-audit-replication-management.yml
     with:
       TargetEnvironment: ${{ github.event.inputs.TargetEnvironment }}
