--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -94,8 +94,8 @@ jobs:
       SourceCodeVersion: ${{ github.event.inputs.SourceCodeVersion }}
       SourceConfigVersion: ${{ github.event.inputs.SourceConfigVersion }}
 
-      # if: ${{ always() && (github.event_name != 'repository_dispatch') && ( needs.stop-audit-replication == 'success' || needs.stop-audit-replication == 'skipped' ) }}
   oracle-rman-pre-duplicate:
+    if: ${{ (github.event_name != 'repository_dispatch') && ( needs.stop-audit-replication.result == 'success' || needs.stop-audit-replication.result == 'skipped' ) }}
     needs: [stop-audit-replication]
     name: oracle-rman-pre-duplicate
     environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
