--- a/.github/workflows/oracle-db-audit-replication-management.yml
+++ b/.github/workflows/oracle-db-audit-replication-management.yml
@@ -14,10 +14,6 @@ on:
           - "delius-core-stage"
           - "delius-core-preprod"
           - "delius-core-prod"
-          - "delius-mis-dev"
-          - "delius-mis-stage"
-          - "delius-mis-preprod"
-          - "delius-mis-prod"
       Action:
         description: "Select action"
         required: true
@@ -26,16 +22,25 @@ on:
           - "stop"
           - "resume"
           - "restart"
-      AuditRestartSCN:
-        description: "Start SCN for Audit Replication"
-        required: false
+      SourceCodeVersion:
+        description: "Source version for the  hmpps-delius-operation-automation. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
-        default: ""
-      UserRestartDateTime:
-        description: "Start Date and Time for User Replication"
-        required: false
+        default: "main"
+      SourceConfigVersion:
+        description: "Source version for the modernisation-platform-configuration-management. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
-        default: ""
+        default: "main"
+
+  workflow_call:
+    inputs:
+      TargetEnvironment:
+        description: "Target environment"
+        required: true
+        type: string
+      Action:
+        description: "Select action"
+        required: true
+        type: string
       SourceCodeVersion:
         description: "Source version for the  hmpps-delius-operation-automation. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
@@ -58,13 +63,21 @@ permissions:
 
 jobs:
   deployment:
-    environment: ${{ github.event.inputs.TargetEnvironment }}
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.77.0
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.78.0
     timeout-minutes: 1440
     continue-on-error: false
     steps:
+
+      # Always run the stop/start tasks from the Delius primary database host.
+      # For stopping it does not really matter, but for restarting we need to read the startup SCN from the database.
+      - name: Prepare Inventory Name
+        id: prepareinventorynames
+        run: |
+          hosts="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')_delius_primarydb"
+          echo "hosts=${hosts}" >> $GITHUB_OUTPUT
 
       - name: Checkout Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
@@ -83,7 +96,10 @@ jobs:
         with:
           repository: ministryofjustice/hmpps-delius-operational-automation
           sparse-checkout-cone-mode: false
-          sparse-checkout: playbooks/oracle_audit_replication_management
+          sparse-checkout: |
+               playbooks/oracle_audit_replication_management
+               playbooks/ansible.cfg
+               common/*
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
@@ -99,5 +115,9 @@ jobs:
       - name: Run Oracle Audit Replication Management Playbook
         run: |
           export ANSIBLE_CONFIG=$ansible_config
+          # Depending on whether this workflow is called by a workflow_dispatch or workflow_call event
+          # the replication action will be stored in different variables.  Pick the non-empty one.
+          [ ! -z '${{ github.event.inputs.Action }}' ] && REPLICATION_ACTION='${{ github.event.inputs.Action }}' || REPLICATION_ACTION='${{ inputs.Action }}'
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-             -e replication_action=${{ github.event.inputs.Action }}
+             -e replication_action=$REPLICATION_ACTION \
+             -e target_hosts=${{ steps.prepareinventorynames.outputs.hosts }}
