--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -700,6 +700,32 @@ jobs:
           -e standby_number=2 \
           -e primary_source_type=active
 
+  oracle-debug:
+    needs: [oracle-rman-duplicate-check,oracle-build-ha,oracle-rman-post-duplicate]
+    name: oracle-debug
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.78.0
+    timeout-minutes: 1440
+    steps:
+
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
+      - name: Show Control Variables
+        id: preparation
+        shell: bash
+        run: |
+             echo "Target Host:  >${{ needs.oracle-rman-duplicate-check.outputs.TargetHost }}<"
+             echo "Post Dupe:    >${{ needs.oracle-rman-post-duplicate.result }}<"
+             echo "Post HA:      >${{ needs.oracle-build-ha.result }}<"
+
   # Restarting Audit Replication should not take place until after any HAs have been built as we
   # normally want to read from the standby database if available, to reduce load on the primary.
   restart-audit-replication:
