--- a/.github/workflows/oracle-db-audit-replication-management.yml
+++ b/.github/workflows/oracle-db-audit-replication-management.yml
@@ -71,6 +71,9 @@ jobs:
     continue-on-error: false
     steps:
 
+      - name: Show environment variables
+        run: printenv
+
       # Always run the stop/start tasks from the Delius primary database host.
       # For stopping it does not really matter, but for restarting we need to read the startup SCN from the database.
       - name: Prepare Inventory Name
