Include RestoreDatetime in outputs

--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -483,6 +483,7 @@ jobs:
       SourceConfigVersion: ${{ steps.response.outputs.SourceConfigVersion }}
       SourceCodeVersion: ${{ steps.response.outputs.SourceCodeVersion }}
       SourceLegacy: ${{ steps.response.outputs.SourceLegacy }}
+      RestoreDatetime: ${{ steps.response.outputs.RestoreDatetime }}
       JobId: ${{ github.job }}
     steps:
 
