--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -512,10 +512,10 @@ jobs:
           echo "DuplicateTarget=${DuplicateTarget}" >> $GITHUB_OUTPUT
           echo "SourceLegacy=$(echo $Inputs | jq -r '.SourceLegacy')" >> $GITHUB_OUTPUT
           Action='${{ github.event.action }}'
-          if [ "$Action" == "oracle-rman-duplicate-success" ]
+          if [ "$Action" = "oracle-rman-duplicate-success" ]
           then
             aws ssm put-parameter --region ${AWS_REGION} --name "/oracle-duplicate/${DuplicateTarget}" --type String --overwrite --value "$(echo $Inputs)"
-          elif [ "$Action" == "oracle-rman-duplicate-failure" ]
+          elif [ "$Action" = "oracle-rman-duplicate-failure" ]
           then
             aws ssm put-parameter --region ${AWS_REGION} --name "/oracle-duplicate/${DuplicateTarget}" --type String --overwrite --value "$(echo $Inputs)"
             exit 2
